--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -22,17 +22,11 @@ spec:
           - name: {{ .Values.cronjob.name }}
             image: {{ .Values.cronjob.image }}
             imagePullPolicy: {{ .Values.cronjob.imagePullPolicy }}
-            command: {{ .Values.cronjob.command }}
-            args: {{ .Values.cronjob.args }}
             envFrom:
               - secretRef:
-                  name: {{ .Values.secret.telegram.name }}
-              - secretRef:
-                  name: {{ .Values.secret.twitter.name }}
+                  name: {{ .Values.secret.name }}
               - configMapRef:
                   name: {{ .Values.configmap.name }}
-              - configMapRef:
-                  name: lake-uuids
             resources:
               requests:
                 cpu: {{ .Values.cronjob.requests.cpu }}
