Prefix exoscale vars with 'AWS_'

--- a/templates/configmap.yml
+++ b/templates/configmap.yml
@@ -5,6 +5,6 @@ metadata:
   namespace: {{ .Values.namespace }}
 data:
   BACKEND_URL: "{{ .Values.configmap.backendUrl }}"
-  ACCESS_KEY_ID: "{{ .Values.configmap.accessKeyId }}"
+  AWS_ACCESS_KEY_ID: "{{ .Values.configmap.accessKeyId }}"
   BUCKET_NAME: "{{ .Values.configmap.bucketName }}"
   AWS_S3_ENDPOINT: "{{ .Values.configmap.s3Endpoint }}"
