--- a/templates/secret.yml
+++ b/templates/secret.yml
@@ -4,4 +4,4 @@ metadata:
   name: {{ .Values.secret.name }}
   namespace: {{ .Values.namespace }}
 data:
-  SECRET_ACCESS_KEY: "{{ .Values.secret.secretAccessKey }}"
+  AWS_SECRET_ACCESS_KEY: "{{ .Values.secret.secretAccessKey }}"
