--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -22,6 +22,12 @@ spec:
           - name: {{ .Values.cronjob.name }}
             image: {{ .Values.cronjob.image }}
             imagePullPolicy: {{ .Values.cronjob.imagePullPolicy }}
+            env:
+              - name: POSTGRES_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    key: password
+                    name: woog.backend-db.credentials.postgresql.acid.zalan.do
             envFrom:
               - secretRef:
                   name: {{ .Values.secret.name }}
